--- a/pages/motion/index.mdx
+++ b/pages/motion/index.mdx
@@ -27,13 +27,15 @@ export default Template
 
 ## Overview
 
-Blah
+Framer Motion shares the same animation and gesture API as the Framer X library, while maintaining HTML and SVG semantics.
+
+This makes it simple to port your high-fidelity prototypes to a production-ready environment, or make something completely from scratch!
 
 </div>
 
 <div>
 
-- **Animations**. Blah
+- **Animations**:
 
 </div>
 
@@ -43,12 +45,56 @@ Blah
 
 <div>
 
-- **Gestures**. Blah
+- **Gestures**: Blah
 
 </div>
 
 ```jsx
-<motion.div drag />
+<motion.div
+  drag="x"
+  dragConstraints={{ left: -100, right: 100 }}
+/>
+```
+
+<div>
+
+- **Variants**:
+
+</div>
+
+```jsx
+<motion.ul animate="hidden" variants={list}>
+  <motion.li variants={item} />
+  <motion.li variants={item} />
+  <motion.li variants={item} />
+</motion.ul>
+```
+
+<div>
+
+- **Imperative controls**: Blah
+
+</div>
+
+```jsx
+const controls = useAnimation()
+
+async function sequence() {
+  await controls.start({ opacity: 1 })
+  return await controls.start({ color: "#0f0" })
+}
+
+return <motion.div onClick={sequence} animate={controls} />
+```
+
+<div>
+
+- **Server-side rendering**:
+
+</div>
+
+```jsx
+<motion.div animate={{ x: 100 }} />
 ```
 
 ---
@@ -57,7 +103,7 @@ Blah
 
 ### Installation
 
-Blaj
+Install `framer-motion` from npm.
 
 ```bash
 npm install framer-motion
