--- a/pages/utilities.mdx
+++ b/pages/utilities.mdx
@@ -61,6 +61,8 @@ export function MyComponent() {
 
 <APIFunction name="useTransform()" />
 
+<APIFunction name="(useTransform:1)" />
+
 ---
 
 ### Transforming Ranges
